--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SUMBank</string>
+    <string name="fb_app_id">162405777803326</string>
+    <string name="ak_client_token">c7247d9ee2d8271feeecbe5dff74daba</string>
 </resources>
